# agency

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DEMO_PROJECTS.md  PLAN_TESTING.md  README.md  SPEC.md  TESTING.md  TODO-audit.md  TODO-init-wizard.md  TODO.md  TODO_PYDANTIC_VALIDATION.md  TODO_TESTING.md  agency  agency.py  generate_agent_script.py  justfile  mock_agent.py  pyproject.toml  test_agency.sh
.agency/: README.md  config.yaml  manager.yaml
.agency/.scripts/: agent-developer.sh  manager-coordinator.sh
.agency/agents/: example.yaml
.agency/managers/: coordinator.yaml
.agents/skills/agency/: SKILL.md  TODO.md
.github/workflows/: ci.yml
.pi/skills/agency-project-eval/: SKILL.md  TEST_REPORT_TEMPLATE.md  run-eval.sh
agency-web/: .gitignore  API.md  ARCHITECTURE.md  COORDINATOR_STATE.md  DATA_MODEL.md  PRD.md  README.md  TEST_PLAN.md  TODO.md  UI_WIREFRAMES.md  docker-compose.yml
agency-web/.github/workflows/: ci.yml  deploy.yml
agency-web/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml  tsconfig.json
agency-web/backend/prisma/: schema.prisma  seed.ts
agency-web/backend/src/: index.ts
agency-web/frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
agency-web/frontend/src/: App.tsx
agency-web/k8s/: configmap.yaml  deployment-api.yaml  deployment-frontend.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service-api.yaml  service-frontend.yaml
agents/: example.yaml
completions/: bash  fish  zsh
demo/: README.md
demo/projects/01-markdown-to-html/: .coverage  README.md  pyproject.toml
demo/projects/01-markdown-to-html/src/: __init__.py  __main__.py  cli.py  parser.py  renderer.py
demo/projects/01-markdown-to-html/tests/: conftest.py  test_parser.py
docs/: quickstart.md
docs/design/: README.md  colors.md  components.md  examples.md  gallery.md  layouts.md  v2.0-cli.md  v2.0-entities.md  v2.0-index.md  v2.0-requirements.md  v2.0-schemas.md  v2.0-template-repo.md  v2.0-workflows.md
e2e/test-todo-app/: README.md  e2e-proof.txt  test_todo.py  todo.py  todos.json
planning/: agency-hire.md  skill-update-assets.md
planning/agency-web/: API.md  DATA_MODEL.md  TEST_PLAN.md
scripts/: generate_models.py  validate_schemas.py
src/agency/: __init__.py  __main__.py  audit.py  audit_cli.py  completions.py  config.py  generate_agent_script.py  heartbeat.py  mock_agent.py  orchestrator.py  pi_inject.py  reviewer.py  session.py  session_logs.py  tasks.py  tasks_cli.py  template.py  template_inject.py  wizard.py
test_tui/: expect_helpers.exp  test_tui.exp  test_tui_full.exp  test_tui_messaging.exp  test_tui_nav.exp  test_tui_sessions.exp  test_tui_tasks.exp
tests/: conftest.py  test_audit.py  test_config.py  test_e2e.py  test_init_context.py  test_pydantic_validation.py  test_session.py  test_tasks.py  test_tasks_cli.py  test_template_inject.py
(+145 files in other folders)
