[project]
name = "agency"
version = "2.0.0"
description = "AI Agent Session Manager - tmux-based multi-agent orchestration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "rwese" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "filelock>=3.13.0",
    "jsonschema>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
agency = "agency.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agency"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/AGENTS.md",
    "/pyproject.toml",
    "/docs/",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1.0",
]
